docs/api/qiskit/0.19/qiskit.circuit.Reset.mdx
---
title: Reset (v0.19)
description: API reference for qiskit.circuit.Reset in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.Reset
---

# Reset

<Class id="qiskit.circuit.Reset" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/reset.py" signature="Reset" modifiers="class">
  Qubit reset.

  Create new reset instruction.

  ## Attributes

  <span id="reset-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.Reset.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="reset-definition" />

  ### definition

  <Attribute id="qiskit.circuit.Reset.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="reset-params" />

  ### params

  <Attribute id="qiskit.circuit.Reset.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="reset-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.Reset.add_decomposition" signature="Reset.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="reset-assemble" />

  ### assemble

  <Function id="qiskit.circuit.Reset.assemble" signature="Reset.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="reset-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.Reset.broadcast_arguments" signature="Reset.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="reset-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.Reset.c_if" signature="Reset.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="reset-copy" />

  ### copy

  <Function id="qiskit.circuit.Reset.copy" signature="Reset.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="reset-inverse" />

  ### inverse

  <Function id="qiskit.circuit.Reset.inverse" signature="Reset.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="reset-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.Reset.is_parameterized" signature="Reset.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="reset-mirror" />

  ### mirror

  <Function id="qiskit.circuit.Reset.mirror" signature="Reset.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="reset-qasm" />

  ### qasm

  <Function id="qiskit.circuit.Reset.qasm" signature="Reset.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="reset-repeat" />

  ### repeat

  <Function id="qiskit.circuit.Reset.repeat" signature="Reset.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

